Filter export of object descriptions in builder
Filter export of object descriptions in ST build. Also iterate over
contents in initial value builder participant, since descriptions do not
contain all variable declarations now.

Change-Id: I8e917bc2b09e1d2df9ff3e2f93924cad6e7e055b
Signed-off-by: Martin Jobst <martin.jobst@posteo.de>